...
        textContainerInset = UIEdgeInsets(top: 12, left: 15, bottom: 12, right: 15)
        textContainer.lineFragmentPadding = 0
        textColor = .label
        layer.cornerRadius = 20
        accessibilityHint = "Your message"
        accessibilityCustomActions = [
            UIAccessibilityCustomAction(name: "Copy") { [weak self] _ in
                guard let self else { return false }
                if isSelectable {
                    copy(nil)
                } else {
                    copyMessage()
                }
                return true
            },
            UIAccessibilityCustomAction(name: "Select") { [weak self] _ in
                self?.beginSelection()
                return true
            }
        ]
        addInteraction(UIContextMenuInteraction(delegate: self))
        addInteraction(selectionMenu)
...
